flowable_setup/design/flowabledesign-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: "flow4xflow-design"
  labels:
    app: "flow4xflow-design"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "flow4xflow-design"
  serviceName: "flow4xflow-design"
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: "flow4xflow-design"
    spec:
      containers:
      - name: "flow4xflow-design"
        image: azuredemocr01.azurecr.io/engage/flowabledesign
        resources: 
          requests:
            memory: "3Gi"
            cpu: "100m"
          limits:
            memory: "8Gi"
            cpu: "4000m"
        ports:
        - containerPort: 8080
        imagePullPolicy: IfNotPresent
      imagePullSecrets:
        - name: acrtoaks-secret-new1
      securityContext:
        runAsGroup: 1004
        runAsUser: 185
