flowable_setup/design/flowable-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: flowable
  labels:
    app: flowable
spec:
  ports:
  - name: http
    port: 9080
    targetPort: 9080
  selector:
    app: flowable
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flowable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flowable
  template:
    metadata:
      labels:
        app: flowable
    spec:
      containers:
      - name: flowable
        image: lin-adv40-harbor.cgiadv.com/temp/flowdesign:4.4A.18
        ports:
        - containerPort: 9080
