flowable_setup/design/flowabledesign-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: "flow4xflow-design"
  labels:
    app: "flow4xflow-design"
spec:
  type: ClusterIP
  ports:
  - port: 9080
    name: http
    targetPort: 9080
  selector:
    app: "flow4xflow-design"
