flowable_setup/design/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "flow4xflow-design"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1500"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1500"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/load-balance: "least-connected"
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
    nginx.ingress.kubernetes.io/session-cookie-path: "/flowable"
    nginx.ingress.kubernetes.io/default-backend: 4xflow-backend
    nginx.ingress.kubernetes.io/custom-http-errors: 404,415,502,503,504
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - "engage-poc-dev-mgmtvm.eastus2.cloudapp.azure.com"
  rules:
  - host: "engage-poc-dev-mgmtvm.eastus2.cloudapp.azure.com"
    http:
      paths:
      - backend:
          service:
            name: "flow4xflow-design"
            port:
              number: 9080
        path: "/flowable-design"
        pathType: Prefix
      - backend:
          service:
            name: "flow4xflow-design"
            port:
              number: 9080
        path: "/flowable-control"
        pathType: Prefix
